--- a/observer/templates/Configuration.html
+++ b/observer/templates/Configuration.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    
     <title>Observer Configuration</title>
 </head>
 <body>
@@ -37,6 +38,9 @@
         </div>
     </div>
     {cameraConfigRows}
+    <div class="row justify-content-center">
+        <iframe src="/captureObjects" style="width:100%;min-height:300px"></iframe>
+    </div>
 </div>
 </body>
 </html>
