I don't even know

--- a/observer/templates/Configuration.html
+++ b/observer/templates/Configuration.html
@@ -13,7 +13,10 @@
     <title>Observer Configuration</title>
 </head>
 <body>
+
 <div class="container">
+    <h1 align="center">Observer Configuration</h1>
+    <h3><a href="/control">Control</a></h3>
     <div class="row">
         <iframe src="/console"></iframe>
     </div>
