--- a/observer/templates/Controller.html
+++ b/observer/templates/Controller.html
@@ -21,6 +21,7 @@
 <body>
 <div class="container">
     <h1 align="center">Observer Controller</h1>
+    <h3><a href="/config">Config</a></h3>
     <div class="row">
         <div class="col-lg offset-lg d-flex align-items-center justify-content-center">
             {captureImage}
