Multipoint calibration working; calibrator ui starting

--- a/observer/templates/Configuration.html
+++ b/observer/templates/Configuration.html
@@ -16,6 +16,7 @@
 <div class="container">
     <h1 align="center">Observer Configuration</h1>
     <h3><a href="/control">Control</a></h3>
+    <h3><a href="/calibrator">Calibrate</a></h3>
     <div class="row">
         <iframe src="/console"></iframe>
     </div>
