Harmony Object Assignment

--- a/harmony/templates/ChangeTable.html
+++ b/harmony/templates/ChangeTable.html
@@ -3,7 +3,6 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="5">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
@@ -17,9 +16,12 @@
         }
     </style>
 
-    <title>Observer Control</title>
+    <title>Harmony Tracked Object Settings</title>
 </head>
 <body>
-{changeTableBody}
+    <button type="button" class="btn btn-primary btn-lg mb-4" onclick="location.href='/control';">Control</button>
+    <div class="container">
+        {changeTableBody}
+    </div>
 </body>
 </html>
