dynamic calibration plan input

--- a/harmony/templates/Configuration.html
+++ b/harmony/templates/Configuration.html
@@ -27,6 +27,11 @@
             <input class="btn-secondary" type="button" value="Calibrate Cameras" onclick="window.location.href='/calibrator'">
         </div>
     </div>
+     <div class="row" align="center">
+        <div class="container">
+            {calibrationPlanForm}
+        </div>
+     </div>
     {cameraConfigRows}
     <div class="row" align="center">
         <input type="button" class="btn-primary" value="Add Camera" onclick="window.location.href='/config/new_camera'">
