--- a/harmony/templates/Controller.html
+++ b/harmony/templates/Controller.html
@@ -32,9 +32,9 @@
                   <input type="radio" class="btn-check" name="btnradio" id="add" autocomplete="off">
                   <label class="btn btn-outline-primary" for="add" onclick="setAdd();">Add</label>
                   <input type="radio" class="btn-check" name="btnradio" id="move" autocomplete="off">
-                  <label class="btn btn-outline-primary" for="Move" onclick="setMove();">Move</label>
+                  <label class="btn btn-outline-primary" for="move" onclick="setMove();">Move</label>
                   <input type="radio" class="btn-check" name="btnradio" id="action" autocomplete="off">
-                  <label class="btn btn-outline-primary" for="Action" onclick="setAction();">Action</label>
+                  <label class="btn btn-outline-primary" for="action" onclick="setAction();">Action</label>
                 </div>
                 <img class="img-fluid border border-primary" src="/console" style="border-radius: 50px;">
             </div>
