Add reset and new camera buttons to config page

--- a/harmony/templates/Controller.html
+++ b/harmony/templates/Controller.html
@@ -21,7 +21,9 @@
 <body>
 <div class="container">
     <h1 align="center">Harmony Controller</h1>
-    <h3 align="right"><a href="/config">Configuration</a></h3>
+    <div class="container" align="right">
+        <input class="btn-info" type="button" value="Configuration" onclick="window.location.href='/config'">
+    </div>
     <div class="row">
         <div class="col">
             <div class="container">
