--- a/harmony/templates/Configuration.html
+++ b/harmony/templates/Configuration.html
@@ -15,7 +15,9 @@
 
 <div class="container">
     <h1 align="center">Harmony Configuration</h1>
-    <h3><a href="/control">Control</a></h3>
+    <div class="container" align="right">
+        <input class="btn-info" type="button" value="Control" onclick="window.location.href='/control'">
+    </div>
     <div class="row">
         <iframe src="/console"></iframe>
     </div>
@@ -33,14 +35,17 @@
         </div>
      </div>
     {cameraConfigRows}
-    <div class="row" align="center">
+    <div class="container" align="left" style="margin-top: 1rem">
         <input type="button" class="btn-primary" value="Add Camera" onclick="window.location.href='/config/new_camera'">
+    </div>
+    <div class="container" align="right">
+        <input type="button" class="btn-primary" value="Reset Harmony Machine" hx-post="/config/reset">
     </div>
 </div>
 </body>
 <script>
-    function camClickListener(camNum, event) {
-        const imgElem = document.getElementById(`cam${camNum}`)
+    function camClickListener(camName, event) {
+        const imgElem = document.getElementById(`cam${camName}`)
         bounds=imgElem.getBoundingClientRect();
         const left=bounds.left;
         const top=bounds.top;
@@ -59,7 +64,7 @@
         const y_offset = 100
         const y_scale = 1
         const image_y = (py - y_offset) * y_scale
-        const formField = document.getElementById(`cam${camNum}_ActiveZone`)
+        const formField = document.getElementById(`cam${camName}_ActiveZone`)
         var formValue
         try {
           formValue = JSON.parse(formField.value)
