--- a/harmony/templates/Controller.html
+++ b/harmony/templates/Controller.html
@@ -51,8 +51,8 @@
         <div class="col">
             <div class="container">
                 <div class="row justify-content-center">
-                    <h3 id="liveCamHeader" class="mt-5">Live Cameras (Selected 0)</h3>
-                    <img id="liveCam" class="img-responsive border border-primary bg-primary" src="/control/camWithChanges/0" style="transform: rotate(-90deg); border-radius: 40px; max-width: 80%">
+                    <h3 id="liveCamHeader" class="mt-5">Live Cameras (Selected {defaultCamera})</h3>
+                    <img id="liveCam" class="img-responsive border border-primary bg-primary" src="/control/camWithChanges/{defaultCamera}" style="transform: rotate(-90deg); border-radius: 40px; max-width: 80%">
                 </div>
                 <div class="row justify-content-center">
                     <script>
